Add phaser to index page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div class="wrapper">
+    	<script type="text/javascript" src="phaser.js"></script>
      	<script type="text/javascript" src="main.js"></script>
 	<header> <h1 style="text-align:center"> SOULLLZZZ </h1></header>
 	<maingame>
