--- a/index.html
+++ b/index.html
@@ -25,12 +25,18 @@
 var game = new Phaser.Game(1200, 600, Phaser.AUTO, 'gameZone', { preload: preload, create: create, update: update });
 
 function preload() {
+	game.load.image('logo', 'Soul-Grinder/Phaser.2D.Glow.png');
 }
 
+var button;
 function create() {
+	button = game.add.button(game.world.centerX - 95, 400, 'logo', actionOnClick, this, 2, 1, 0);
 }
 
 function update() {
+}
+
+function actionOnClick () {
 }
 
 </script>
