--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 var game = new Phaser.Game(1200, 600, Phaser.AUTO, 'gameZone', { preload: preload, create: create, update: update });
 
 function preload() {
-	game.load.image('logo', 'Phaser.2D.Glow.png');
+	game.load.image('logo', './Phaser.2D.Glow.png');
 }
 
 var button;
