--- a/index.html
+++ b/index.html
@@ -28,22 +28,56 @@ function preload() {
 	game.load.spritesheet('basicButton', './flixel-button.png', 80, 20);
 }
 
+var soulsCount; var countText; 
+var perSecondText; var soulsPerSecond;
 var cursorButton; var cursorButtonText;
 function create() {
 	game.stage.backgroundColor = 0x8d8d8d;
-	cursorButton = game.add.button(950, 120, 'basicButton', actionOnClick, this, 2, 1, 0);
+	//Souls count in the center.
+	countText = game.add.text(600, 300, 'Souls: 0', { fontSize: '48px', fill: '#000', align: "center"});
+	perSecondText = game.add.text(650, 300, 'Per Second: 0.5', { fontSize: '16px', fill: '#000', align: "center" });
+	//Building buttons and corresponding text.
+	cursorButton = game.add.button(950, 120, 'basicButton', buyCursor, this, 2, 1, 0);
 	cursorButton.scale.setTo(2.5, 2.5);
 	var style = { font: "16px Arial", fill: "#004444", wordWrap: true, wordWrapWidth: cursorButton.width, align: "center" };
 
-	cursorButtonText = game.add.text(0, 0, "- Buy Cursor -10", style);
-	cursorButtonText.x = Math.floor(cursorButton.x + cursorButton.width / 2);
-    	cursorButtonText.y = Math.floor(cursorButton.y + cursorButton.height / 2);
+	cursorButtonText = game.add.text(0, 0, "- Cursors      1/nCost: 10", style);
+	cursorButtonText.x = Math.floor(cursorButton.x + 100);
+    	cursorButtonText.y = Math.floor(cursorButton.y + 25);
 }
 
+//Building values that need saved: Count, base production, production multiplier.
+var cursors = 1;
+var cursorProd = 0.5;
+var cursorMulti = 1;
+var farms = 0;
+var farmProd = 3;
+var farmMulti = 1;
+// Building values that don't need saved: Base building cost, total production amount
+var cursorBaseCost = 9;
+var farmBaseCost = 50;
+var totalProd = 0;
+var tickInterval=1000;  // Modifiable by upgrades.
+var gameTick = 200;	    // The "master" game speed.
+var autoSave = -1;
+
+//Main game stuff.  Basic increment function, window update interval, number printing.
+var score; var scoreText;
 function update() {
+	score += 1;
+    	countText.text = 'Score: ' + score;
 }
 
-function actionOnClick () {
+function calcTotalProd(){
+	totalProd = (cursorProd * cursorMulti * cursors) + (farmProd * farmMulti * farms);
+}
+
+function prettify(input){
+    var output = Math.round(input * 1000000)/1000000;
+	return output;
+}
+
+function buyCursor () {
 }
 
 </script>
