timer...why u do dis

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@ function create() {
 	var style = { font: "16px Arial", fill: "#004444", wordWrap: true, wordWrapWidth: cursorButton.width, align: "center" };
 
 	cursorButtonText = game.add.text(0, 0, "- Cursors      1" + "/nCost: 10", style);
-	cursorButtonText.x = Math.floor(cursorButton.x + 5);
-    	cursorButtonText.y = Math.floor(cursorButton.y + 15);
+	cursorButtonText.x = Math.floor(cursorButton.x + 10);
+    	cursorButtonText.y = Math.floor(cursorButton.y + 5);
 
 	//The primary increment function.
-	game.time.events.loop(Phaser.Timer.SECOND, incrementByProd, this);
+	game.time.events.loop(1000, incrementByProd, this);
 }
 
 //Building values that need saved: Count, base production, production multiplier.
@@ -61,8 +61,8 @@ var farmMulti = 1;
 var cursorBaseCost = 9;
 var farmBaseCost = 50;
 var totalProd = 0;
-var tickInterval= Phaser.Timer.SECOND;  // Modifiable by upgrades.
-var gameTick = Phaser.Timer.SECOND / 5;	    // The "master" game speed.
+var tickInterval= 1000;     // Modifiable by upgrades.
+var gameTick = 200;	    // The "master" game speed.
 var autoSave = -1;
 
 //Main game stuff.  Basic increment function, window update interval, number printing.
