--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <div class="wrapper" id="gameZone">
     	<script type="text/javascript" src="phaser.js"></script>
     	<script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
-     	<script type="text/javascript" src="main.js"></script>
 	<header> <h1 style="text-align:center"> Soul Grinder </h1></header>
 <script type="text/javascript">
 
@@ -51,7 +50,7 @@ function create() {
 	cursorButtonText.x = Math.floor(cursorButton.x + 22);
     	cursorButtonText.y = Math.floor(cursorButton.y + 12);
     	//Farms
-	farmButton = game.add.button(buildingButtonX, cursorButton.x + buttonSeparationY, 'basicButton', buyFarm, this, 2, 1, 0);
+	farmButton = game.add.button(buildingButtonX, cursorButton.y + buttonSeparationY, 'basicButton', buyFarm, this, 2, 1, 0);
 	farmButton.scale.setTo(2.5, 2.5);
 	farmButtonText = game.add.text(0, 0, "- Farms      0" + "/nCost: 50", style);
 	farmButtonText.x = Math.floor(farmButton.x + 22);
@@ -128,9 +127,9 @@ function buyFarm(){
     if(soulsCount >= farmCost){                                   
         farms++;                                     
     	soulsCount = soulsCount - farmCost;  
-		var nextCost = Math.floor(farmBaseCost * Math.pow(1.15,farms));                       
-		farmButtonText.text = "Farms: " + farms + "  Cost: " + nextCost; 
-		countText.text = 'Souls: ' + prettify(soulsCount);
+	var nextCost = Math.floor(farmBaseCost * Math.pow(1.15,farms));                       
+	farmButtonText.text = "Farms: " + farms + "  Cost: " + nextCost; 
+	countText.text = 'Souls: ' + prettify(soulsCount);
     };
 };
 
