--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     	<script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
 	<header> <h1 style="text-align:center"> Soul Grinder </h1></header>
 	
-	<script type="text/javascript" src = "./game.js"></script>
+	<script type="text/javascript" src = "game.js"></script>
 
     </div>
   </body>
